--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@
     
 }
 .testimonials{
-    background: url(bg1.jfif) no-repeat;
+    background: url('bg1.jfif') no-repeat;
     background-size: cover;
 }
 .testimonials h2{
