--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
     background-color: #95a5a6;
 }
 .banner{
-    background: url('banner.jfif') no-repeat;
+    background: url('/banner.jfif') no-repeat;
     background-size: 100vw 50vh;
 
 }
